2013-04-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/amiga.c: Fix size of checksummed block.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Use -mcmodel=large on x86_64-emu as well.
	Reported by: qwertial.

2013-04-29  Vladimir Testov <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/circular_progress.c: Set start_angle in degrees
	with syntax "XXX deg"/"XXX °".

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Make PCI init in i386-qemu port more robust.

2013-04-29  Vladimir Testov <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c: Refresh first_shown_entry value when
	cached view is reused.
	* grub-core/gfxmenu/view.c: Call the refresh procedure for all
	open boot menus.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Unify more code in grub-install_header.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Add few new tests.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Enforce disabling of firmware disk drivers when native drivers kick in.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/nativedisk.c: Customize the list of modules on
	platform. Don't try to search for disks already using native drivers.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/uhci.c: Fix DMA handling and enable on all PCI
	platforms.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_arglist_to_argv): Fix
	handling of variables containing backslash.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/list.h (FOR_LIST_ELEMENTS_SAFE):Fix a NULL pointer
	dereference.
	Reported by: qwertial.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/arc/init.c: Fix prefix detection.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/arg.c (grub_arg_show_help): Fix a NULL pointer
	dereference.
	Reported by: qwertial.
